// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article with automatically placed NewsletterPuff should not render another NewsletterPuff when one already exists 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <div>
                  <div>
                    <button>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height={14}
                        viewBox="0 0 16 16"
                        width={14}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"
                        />
                      </svg>
                      Share
                    </button>
                    <div
                      aria-expanded={false}
                    >
                      <div>
                        <h3>
                          Share this article
                        </h3>
                        <button>
                          <svg
                            fill="none"
                            height={12}
                            viewBox="0 0 14 14"
                            width={12}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
                              fill="#333333"
                            />
                          </svg>
                        </button>
                      </div>
                      <div>
                        <a
                          href=""
                          target="_blank"
                          title="Share by email"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={16}
                                role="img"
                                title="Share by email"
                                viewBox="0 0 22 16"
                                width={22}
                              >
                                <title>
                                  Share by email
                                </title>
                                <g
                                  fill="currentColor"
                                  fillRule="nonzero"
                                >
                                  <path
                                    d="M22,0 L22,16 L0,16 L0,0 L22,0 Z M13.5135,8 L20.2711667,2.23985068 L20.0346667,1.91880541 L11,9.20018665 L2.04233333,2.00093327 L1.80583333,2.32197853 L8.56533333,8.08026132 L1.80766667,13.8404106 L2.04233333,14.1595894 L9.0365,8.47970135 L11,10.1595894 L13.0423333,8.39944004 L20.0346667,14.079328 L20.2711667,13.7582828 L13.5135,8 Z"
                                  />
                                </g>
                              </svg>
                            </div>
                            <span>
                              Email
                            </span>
                          </div>
                        </a>
                        <a
                          href="https://twitter.com/intent/tweet?text=Shared with you by a Times subscriber.%0A%0AEnjoy this article for free.%0A%0Ahttps://url.io"
                          target="_blank"
                          title="Share on Twitter"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={16}
                                role="img"
                                title="Share on Twitter"
                                viewBox="0 0 24 24"
                                width={20}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  Share on Twitter
                                </title>
                                <g
                                  clipPath="url(#clip0_2702_211136)"
                                >
                                  <path
                                    d="M13.9761 10.1624L22.7186 0H20.6469L13.0558 8.82384L6.99289 0H0L9.16837 13.3432L0 24H2.07179L10.0881 14.6817L16.491 24H23.4839L13.9756 10.1624H13.9761ZM11.1385 13.4608L10.2096 12.1321L2.81829 1.55962H6.00044L11.9653 10.0919L12.8942 11.4206L20.6479 22.5113H17.4657L11.1385 13.4613V13.4608Z"
                                    fill="currentColor"
                                  />
                                </g>
                                <defs>
                                  <clipPath>
                                    <rect
                                      fill="white"
                                      height="24"
                                      width="24"
                                    />
                                  </clipPath>
                                </defs>
                              </svg>
                            </div>
                            <span>
                              Twitter
                            </span>
                          </div>
                        </a>
                        <a
                          href="https://www.facebook.com/sharer/sharer.php?u=https://url.io"
                          target="_blank"
                          title="Share on Facebook"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={18}
                                role="img"
                                title="Share on Facebook"
                                viewBox="14 10 10.592460632324219 20.397258758544922"
                                width={9}
                              >
                                <title>
                                  Share on Facebook
                                </title>
                                <g
                                  fill="currentColor"
                                  fillRule="nonzero"
                                >
                                  <path
                                    d="M20.8754687,30.3972581 L20.8754687,21.0930804 L23.9984274,21.0930804 L24.4660462,17.4670773 L20.8754687,17.4670773 L20.8754687,15.1521034 C20.8754687,14.1022918 21.1669846,13.3868799 22.6723889,13.3868799 L24.5924599,13.3860409 L24.5924599,10.1429146 C24.2603909,10.0987257 23.1206168,10 21.7945782,10 C19.0262491,10 17.1309761,11.6898042 17.1309761,14.7929991 L17.1309761,17.4670773 L14,17.4670773 L14,21.0930804 L17.1309761,21.0930804 L17.1309761,30.3972581 L20.8754687,30.3972581 Z"
                                  />
                                </g>
                              </svg>
                            </div>
                            <span>
                              Facebook
                            </span>
                          </div>
                        </a>
                        <a
                          href="https://www.facebook.com/sharer/sharer.php?u=https://url.io"
                          target="_blank"
                          title="Copy link to clipboard"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={16}
                                role="img"
                                title="Copy link to clipboard"
                                viewBox="0 0 15 15"
                                width={15}
                              >
                                <title>
                                  Copy link to clipboard
                                </title>
                                <path
                                  d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
                                  fill="currentColor"
                                />
                              </svg>
                            </div>
                            <span>
                              Link
                            </span>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <article>
        <div>
          <div>
            <p>
              Some paragraph 1
            </p>
            <p>
              Some paragraph 2
            </p>
            <p>
              Some paragraph 3
            </p>
            <span>
              <p>
                Some paragraph 4
              </p>
              <div>
                <InlineNewsletterPuff
                  code="TNL-101"
                  copy="We’ll send you our top stories, across all sections, straight to your inbox. Simple as that."
                  headline="Daily Briefing"
                  section="News"
                />
              </div>
              <p
                id="last-paragraph"
              >
                Some paragraph 5
              </p>
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`Article with automatically placed NewsletterPuff should render a NewsletterPuff correctly 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <div>
                  <div>
                    <button>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height={14}
                        viewBox="0 0 16 16"
                        width={14}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"
                        />
                      </svg>
                      Share
                    </button>
                    <div
                      aria-expanded={false}
                    >
                      <div>
                        <h3>
                          Share this article
                        </h3>
                        <button>
                          <svg
                            fill="none"
                            height={12}
                            viewBox="0 0 14 14"
                            width={12}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
                              fill="#333333"
                            />
                          </svg>
                        </button>
                      </div>
                      <div>
                        <a
                          href=""
                          target="_blank"
                          title="Share by email"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={16}
                                role="img"
                                title="Share by email"
                                viewBox="0 0 22 16"
                                width={22}
                              >
                                <title>
                                  Share by email
                                </title>
                                <g
                                  fill="currentColor"
                                  fillRule="nonzero"
                                >
                                  <path
                                    d="M22,0 L22,16 L0,16 L0,0 L22,0 Z M13.5135,8 L20.2711667,2.23985068 L20.0346667,1.91880541 L11,9.20018665 L2.04233333,2.00093327 L1.80583333,2.32197853 L8.56533333,8.08026132 L1.80766667,13.8404106 L2.04233333,14.1595894 L9.0365,8.47970135 L11,10.1595894 L13.0423333,8.39944004 L20.0346667,14.079328 L20.2711667,13.7582828 L13.5135,8 Z"
                                  />
                                </g>
                              </svg>
                            </div>
                            <span>
                              Email
                            </span>
                          </div>
                        </a>
                        <a
                          href="https://twitter.com/intent/tweet?text=Shared with you by a Times subscriber.%0A%0AEnjoy this article for free.%0A%0Ahttps://url.io"
                          target="_blank"
                          title="Share on Twitter"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={16}
                                role="img"
                                title="Share on Twitter"
                                viewBox="0 0 24 24"
                                width={20}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  Share on Twitter
                                </title>
                                <g
                                  clipPath="url(#clip0_2702_211136)"
                                >
                                  <path
                                    d="M13.9761 10.1624L22.7186 0H20.6469L13.0558 8.82384L6.99289 0H0L9.16837 13.3432L0 24H2.07179L10.0881 14.6817L16.491 24H23.4839L13.9756 10.1624H13.9761ZM11.1385 13.4608L10.2096 12.1321L2.81829 1.55962H6.00044L11.9653 10.0919L12.8942 11.4206L20.6479 22.5113H17.4657L11.1385 13.4613V13.4608Z"
                                    fill="currentColor"
                                  />
                                </g>
                                <defs>
                                  <clipPath>
                                    <rect
                                      fill="white"
                                      height="24"
                                      width="24"
                                    />
                                  </clipPath>
                                </defs>
                              </svg>
                            </div>
                            <span>
                              Twitter
                            </span>
                          </div>
                        </a>
                        <a
                          href="https://www.facebook.com/sharer/sharer.php?u=https://url.io"
                          target="_blank"
                          title="Share on Facebook"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={18}
                                role="img"
                                title="Share on Facebook"
                                viewBox="14 10 10.592460632324219 20.397258758544922"
                                width={9}
                              >
                                <title>
                                  Share on Facebook
                                </title>
                                <g
                                  fill="currentColor"
                                  fillRule="nonzero"
                                >
                                  <path
                                    d="M20.8754687,30.3972581 L20.8754687,21.0930804 L23.9984274,21.0930804 L24.4660462,17.4670773 L20.8754687,17.4670773 L20.8754687,15.1521034 C20.8754687,14.1022918 21.1669846,13.3868799 22.6723889,13.3868799 L24.5924599,13.3860409 L24.5924599,10.1429146 C24.2603909,10.0987257 23.1206168,10 21.7945782,10 C19.0262491,10 17.1309761,11.6898042 17.1309761,14.7929991 L17.1309761,17.4670773 L14,17.4670773 L14,21.0930804 L17.1309761,21.0930804 L17.1309761,30.3972581 L20.8754687,30.3972581 Z"
                                  />
                                </g>
                              </svg>
                            </div>
                            <span>
                              Facebook
                            </span>
                          </div>
                        </a>
                        <a
                          href="https://www.facebook.com/sharer/sharer.php?u=https://url.io"
                          target="_blank"
                          title="Copy link to clipboard"
                        >
                          <div>
                            <div>
                              <svg
                                aria-label=""
                                height={16}
                                role="img"
                                title="Copy link to clipboard"
                                viewBox="0 0 15 15"
                                width={15}
                              >
                                <title>
                                  Copy link to clipboard
                                </title>
                                <path
                                  d="M13.936 1.12A3.532 3.532 0 0 0 11.36 0a3.53 3.53 0 0 0-2.575 1.119l-3.22 3.38c-1.42 1.49-1.42 3.914 0 5.405.229.24.49.43.763.596L7.71 9.052a1.793 1.793 0 0 1-.857-.5 1.924 1.924 0 0 1-.455-.827v-.002a1.984 1.984 0 0 1-.06-.324l-.001-.011a2.074 2.074 0 0 1-.005-.32l.002-.025c.009-.103.024-.206.048-.307.001-.009.005-.017.007-.026.08-.314.23-.614.464-.86l3.22-3.38a1.776 1.776 0 0 1 1.288-.558c.465 0 .932.187 1.287.559a1.98 1.98 0 0 1 0 2.703l-1.119 1.174c.03.082.05.167.075.25l.001.002a5.013 5.013 0 0 1 .216 1.702l-.007.082c-.008.134-.013.268-.032.402l2.154-2.26c1.42-1.491 1.42-3.917 0-5.406zM8.672 4.5l-1.38 1.45c.312.08.611.24.856.497.227.24.373.526.456.828v.003c.029.107.048.214.06.323v.011c.01.107.013.213.006.32l-.003.026a2.01 2.01 0 0 1-.047.307c-.002.01-.006.018-.008.026-.08.314-.23.613-.464.86l-3.22 3.378c-.356.374-.822.56-1.288.56-.465 0-.932-.186-1.287-.56a1.978 1.978 0 0 1 0-2.702l1.119-1.175c-.03-.082-.05-.167-.075-.25l-.02-.069A4.982 4.982 0 0 1 3.18 6.7c0-.029.004-.056.006-.083.008-.134.013-.268.032-.402l-2.154 2.26c-1.42 1.49-1.42 3.915 0 5.405A3.537 3.537 0 0 0 3.64 15c.973 0 1.887-.398 2.576-1.119l3.22-3.379c1.419-1.49 1.419-3.915 0-5.404a3.644 3.644 0 0 0-.764-.598z"
                                  fill="currentColor"
                                />
                              </svg>
                            </div>
                            <span>
                              Link
                            </span>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <article>
        <div>
          <div>
            <p>
              Some paragraph 1
            </p>
            <p>
              Some paragraph 2
            </p>
            <p>
              Some paragraph 3
            </p>
            <AutoNewsletterPuff
              code="TNL-101"
              copy="Our flagship newsletter featuring our top stories and analysis, delivered every morning."
              headline="Daily Briefing"
              section="News"
            />
            <span>
              <p>
                Some paragraph 4
              </p>
              <p
                id="last-paragraph"
              >
                Some paragraph 5
              </p>
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
